--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
 	</head>
 	<body>
 		<h1>¡Despliegue con AWS Learner Lab!</h1>
+                <p> Este sitio ha sido actualizado manualmente en AWS Learner Lab.</p>
+		<h2> YUPIIIIIIIIIII</h2>
 	</body>
 </html>
